--- a/nlp/chatbot.qmd
+++ b/nlp/chatbot.qmd
@@ -1,12 +1,12 @@
 # Chatbots
-Chatbots are classified into two broad categories: 
+Chatbots are classified into two broad categories:- 
     * Goal oriented dialogs
     * chitchats
 
 Types of chatbots:-
-* Exact answer or FAQ bot
-* Flow based bot
-* Open-ended bot
+    * Exact answer or FAQ bot
+    * Flow based bot
+    * Open-ended bot
 
 
 ## A Pipeline for Building Dialog systems
@@ -52,3 +52,6 @@ This approach is called `Conversation Driven Development.`
 
 ## Annotation Framework
 Wrapper frameworks are available for Rasa, which eases the data annotation process to generate large-scale dialog datasets. `Chatette` is such a framework
+
+
+![RASA Architecture](/Images/rasa_architecture.png)
