created a page for Interview Resources

--- a/blogs/rlhf.qmd
+++ b/blogs/rlhf.qmd
@@ -12,3 +12,6 @@
 policy gradient methods 
 
 ![PPO](https://www.youtube.com/watch?v=HrapVFNBN64)
+
+
+## What are generative models and how does it differ from probabilistic models?
