--- a/blogs.qmd
+++ b/blogs.qmd
@@ -7,6 +7,7 @@ sidebar: false
 * [Ethics and Bias in Data Science](https://advaitha.github.io/2020/10/07/ethics_part_1.html) 
 * [Mitigating Bias](https://advaitha.github.io/2020/10/09/Ethics-in-datascience-part-2.html)
 * [What is a DMP and how to create it](https://www.linkedin.com/pulse/what-dmp-how-create-thulasiram-gunipati/)
+* [Why Data Lakes become Data Swamps](/data_architecture/data_lake.qmd)
 * [Go and the challenge to Arificial General Intelligence](https://www.upgrad.com/blog/go-and-the-challenge-to-artificial-general-intelligence/)
 * [Anamoly Detection and Interpretability](https://www.linkedin.com/pulse/anomaly-detection-interpretability-2020-thulasiram-gunipati/)
 * [ML Models: From Jupyter notebook to a database](https://www.linkedin.com/pulse/ml-models-from-jupyter-notebook-database-thulasiram-gunipati/)
